[package]
name = "enum-printer"
version = "0.1.0"
authors = ["jyuch <jyuch@users.noreply.github.com>"]
edition = "2021"

[dependencies]
compat = { path = "../compat" }

[dependencies.windows]
workspace = true
features = [
    "Win32_Graphics_Printing",
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_Graphics_Gdi",
    "Win32_Security"
]
