[package]
name = "print-via-gdi"
version = "0.1.0"
authors = ["jyuch <jyuch@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
winapi = { version = "0.3", features = ["std", "impl-default", "minwindef", "windef", "winuser", "winspool", "wingdi", ] }