[package]
name = "print-via-gdi"
version = "0.1.0"
authors = ["jyuch <jyuch@users.noreply.github.com>"]
edition = "2021"

[dependencies]
compat = { path = "../compat" }

[dependencies.windows]
version = "0.44.0"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Printing_PrintTicket",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_Storage_Xps",
]
